assets/css/style.css
/* Fonts / General */

@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:100,200,300,400,500,600,700");

html {
    /* currently not fully supported in all browsers */
    scroll-behavior: smooth;
}

body {
    font-family: "Source Sans Pro", sans-serif;
    background-color: #eae9f2;
    padding: 0;
}

.row {
    margin: 0;
    padding: 0;
}


/* colors */

.bg-light-blue {
    background-color: #0062a5;
}

.bg-dark-blue {
    background-color: #00428d;
}

.bg-green {
    background-color: #0ba871;
}

.col-light-grey {
    color: #eae9f2;
}

.col-white {
    color: #fff;
}

.btn-danger {
    background-color: #fa4c33;
    border-color:#fa4c33;
}


/* / Jumbotron / */
#home {
    background-image: url("https://res.cloudinary.com/dajuujhvs/image/upload/v1576353052/starcraft-creations/cover-2_r6f7jm.jpg");
    background-position: bottom;
    background-attachment: fixed;
    background-size: cover;
    height: 100vh;
    width: 100vw;
    margin-bottom: 0;
    z-index: 1;
}

/*navbar*/
#home nav {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    z-index: 1;
}

.navbar .navbar-collapse {
    text-align: center;
}

.navbar-dark .navbar-nav .nav-link i {
    margin-right: 10px;
}

.navbar-dark .navbar-nav .nav-link {
    padding: 10px 0 0;
    color: rgba(255, 255, 255, 0.5);
    font-weight: 300;
    font-size: 1.1em;
    margin-right: 40px;
}

.navbar-dark .navbar-nav .nav-link:hover,
.navbar-dark .navbar-nav .nav-link:focus {
    color: #fff;
}

.navbar-dark .nav-item > .nav-link.active {
    color: #fff;
    border-bottom: 4px solid #fa4c33;
}

/* Logo */
#logo {
    padding-left: 80px;
    padding-bottom: 5px;
}

/* Header Title */
.txt-header-title {
    background-color: rgba(0, 98, 165, 0.5);
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100vw;
    padding: 0;
}

.txt-header-title h1 {
    padding: 1.5em 0 0 1em;
    font-weight: 500;
    font-size: 3em;
}

.txt-header-title p {
    font-size: 1.5em;
    font-weight: 200;
    padding-left: 50px;
}

.txt-header-title button:hover {
    color: #fff;
    background-color: #be3f28;
}

#triangle {
    width: 0;
    height: 0;
    border-bottom: 250px solid rgba(0, 98, 165, 0.6);
    border-right: 100px solid transparent;

}

/* About */

/*#about-container {*/
/*    padding: 4em;*/
/*}*/

#about-container .card {
    margin-top: 1em;
    text-align: center;

    border: 2px solid #be3f28;
    height: 100%;
}

#about-container .card-body h5 {
    text-transform: uppercase;
    font-size: 2em;
    font-weight: 500;
}

#about-container .card-body p {
    margin-top: 1em;
    margin-bottom: 0;
    font-size: 1.1em;
    font-weight: 300;
}

.about-card {
    padding: 2em;
}

.card-img-top {
    padding: 5px;
    border-radius: 10px;
}

/* testimonials review section */

.testimonials .fa-quote-left {
    color: #fa4c33;
    font-size: 1.1em;
}

.testimonials .fa-star,
.fa-star-half-alt {
    color: #fa4c33;
    font-size: 1.5em;
}

.review-text {
    margin-top: 1em;
    font-size: 1.2em;
    font-weight: 300;
    padding: 20px;
}

/*Team*/

#team-container {
    width: 100%;
    height: 100%;
    padding-bottom: 1em;
}

.team-member {
    width: 250px;
    height: 250px;
    background-color: #0062a5;
    border-radius: 50%;
    border: 3px solid #fa4c33;
    margin-top: 100px;
}

.team-member img {
    padding-top: 10px;
    width: 180px;
    height: 180px;
}

.team-member img:hover {
    cursor: pointer;
}

.team-member h5 {
    padding-top: 2.1em;
    font-size: 2em;
    font-weight: 700;
    color: #fa4c33;
}

/* services */


#services .card button:hover {
    color: #fff;
    background-color: #be3f28;
}

#services .card button {
    margin: 5px;
}

#services .card h5 {
    text-transform: uppercase;
    font-weight: 400;
    padding-top: 1em;
    padding-bottom: 5px;
    padding-left: 0;
    margin: 0;
    font-size: 1.3em;
    border-bottom: 3px solid #fa4c33;
}

#services .card p {
    font-weight: 300;
    text-align: left;
    padding-top: 1.2em;
    padding-right: 10px;
}

#services .card {
    margin: 1em;
    padding: 0;
    background-color: #00428d;
    border: 2px solid #be3f28;
}

#services img {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;

}

#services img:hover {
    cursor: pointer;
}

.service-btn {
    position: absolute;
    bottom: 0;
    right: 0;
    padding-right: 2.5em;
    padding-bottom: 0.5em;
}

/* modal */

.modal-content {
    background-color: #0062a5;
}

#modal-all input {
    background-color: #0062a5;
    border: 0;
    border-bottom: 1px solid #00428d;
    border-radius: 0;
    margin-bottom: 10px;
    color: #fff;
}

#modal-all input::placeholder {
    color: rgba(255, 255, 255, 0.5);
}

#modal-all textarea,
.form-control {
    background-color: #0062a5;
    border-color: #00428d;
    color: #fff;
}

#modal-all textarea::placeholder {
    color: rgba(255, 255, 255, 0.5);
}

/*contact*/

/*form*/

#contact h5 {
    text-transform: uppercase;
    font-weight: 400;
    font-size: 1.3em;
    padding-left: 1em;
}

#contact-form {
    width: 100%;
    padding: 0 1em;
    border-right: 2px solid #fa4c33;
    border-left: 2px solid #fa4c33;
}

#contact-form input {
    background-color: #00428d;
    border: 0;
    border-bottom: 1px solid #0062a5;
    border-radius: 0;
    margin-bottom: 10px;
    color: #fff;
}

#contact-form input::placeholder {
    color: rgba(255, 255, 255, 0.5);
}

#contact-form textarea {
    background-color: #0062a5;
    border-color: #0062a5;
    color: #fff;
}

#contact-form textarea::placeholder {
    color: rgba(255, 255, 255, 0.5);
}

#contact .card {
    padding: 10px;
    margin: 4em;
}

.address {
    text-align: center;
    letter-spacing: 2px;
}

.address b {
    color: #fa4c33;
    font-size: 1.2em;
}

#map {
    padding: 20px;
}

#map iframe {
    border-radius: 5px;
    border: solid 2px #eae9f2;
    width: 100%;
    height: 100%;
    padding: 0;
    margin: 0;
}

.address i {
    color: #fa4c33;
    font-size: 0.5em;
    vertical-align: middle;

    letter-spacing: 5px;
}

#contact-form button {
    margin-top: 10px;
}

#contact-form button:hover {
    color: #fff;
    background-color: #1c7430;
}

/* footer */

#copyright p {
    padding-left: 2em;
    padding-top: 3em;
    font-size: 1em;
    font-weight: 400;
    text-align: left;
}

#mail-address {
    padding: 2em;
    text-align: center;
}

#mail-address a:hover {
    color: #fa4c33;
}

#mail-address i {
    padding-right: 5px;
}

.social li {
    list-style: none;
}

.icon i {
    font-size: 2.2em;
    padding-left: 0.3em;
    padding-right: 0.3em;
    color: rgba(255, 255, 255, 0.7);
}

.icon i:hover {
    color: #fa4c33;
}

.social {
    text-align: center;
    padding-top: 3em;
}

.subscribe-txt {
    padding-top: 10px;
    border-bottom: 0;
}

#newsletter {
    padding-top: 1em;
}

#newsletter input {
    /*width: 60%;*/
    padding: 0;
    background-color: #0062a5;
    border-color: #0062a5;
    border-radius: 0;
    color: #fff;
}

#newsletter input::placeholder {
    color: rgba(255, 255, 255, 0.5);
}

/* ---- Media ----*/

@media (max-width: 1440px) {
    .txt-header-title h1 {
        padding: 2em 0 0 0.2em;
        font-size: 2em;
    }

    .txt-header-title p {
        font-size: 1.3em;
        font-weight: 200;
        padding-left: 05px;
    }

    .txt-header-title button {
        margin-bottom: 0;
    }
}

@media (max-width: 1024px) {
    #logo {
        padding-left: 10px;
    }

    .navbar-dark .navbar-nav .nav-link {
        margin-right: 20px;
    }
}

@media (max-width: 768px) {
    #logo {
        padding-left: 5px;
    }

    .txt-header-title h1 {
        padding: 2em 0 0 0.2em;
        font-size: 1.5em;
    }

    .txt-header-title p {
        font-size: 1em;
        font-weight: 200;
        padding-left: 05px;
    }

    .txt-header-title button {
        margin-bottom: 0;
    }

    .about-card {
        padding: 1em 1em 1em 1em;
    }


    #about-container .card-body h5 {
        font-size: 1.5em;
    }

    #about-container .card-body p {
        font-size: 1em;
        font-weight: 200;
    }

    .review-text {
        padding: 3em 2em;
    }

    #services {
        padding-top: 5em;
    }

    #services .product-card {
        padding: 0;
    }

    #services .card button {
        padding: 5px;

    }
    .service-btn{
        padding: 0;
    }

    #services .card h5 {
        padding: 0.3em 1em;
        margin: 0;
        font-size: 1.3em;
    }

    #services .card p {
        font-weight: 300;
        padding: 0 1.5em 2.5em;
        margin: 1em 0;
        font-size: 1em;
    }

    #contact {
        padding: 5.5em 10px 0;
    }

    #contact .card {
        margin: 0 0 4em;
    }

    #contact h5 {
        padding-top: 0.5em;
        font-weight: 300;
    }

    #contact .contact-card {
        padding: 0;
    }

    #contact .enquiry {
        height: 200px;
    }

    #map {
        padding: 0;
        padding-top: 1em;
        height: 250px;
    }

    #mail-address {
        padding: 0;
        padding-top: 1em;
        text-align: center;
    }

    .social {
        text-align: center;
        padding-top: 0.5em;
    }

    .subscribe-txt {
        padding-top: 10px;
        border-bottom: 0;
    }

    #newsletter {
        margin-left: 1em;
        margin-bottom: 1em;
        padding: 0;

    }

    #newsletter input {
        margin-left: 1em;
    }

    .subscribe-txt {
        padding-left: 1em;
        border-bottom: 0;
    }

    .icon i {
        padding-left: 0.1em;
        padding-right: 0.1em;
    }

    .icon {
        margin-left: auto;
    }

    #modal-all input {
        margin-bottom: 0;
    }

    address {
        margin-bottom: 0;
    }

    #copyright p {
        padding: 0;
        padding-top: 1em;
        margin-top: 0;
        font-weight: 300;
        text-align: center;
    }

     #newsletter {
        margin:0;
    }

    #newsletter input {
        margin-left: 1em;
    }
    .newsletter-field{
        margin-left: 0 ;
    }
    .subscribe-txt {
        padding-left: 1em;
        border-bottom: 0;
    }

    .icon i {
        padding-left: 0.1em;
        padding-right: 0.1em;
    }

    .icon {
        margin-left: auto;
    }
    .newsletter-button{
        padding-left:0 ;
    }
    #modal-all input {
        margin-bottom: 0;
    }

    address {
        margin-bottom: 0;
    }
    .review-text {
        padding: 1em 2em;
    }

    .social {
        margin: 0;
        padding: 0;

    }

    .subscribe-txt {
        padding: 10px 0 0;
        border-bottom: 0;
    }
}

/*@media (max-width: 425px) {*/

/*    .txt-header-title h1 {*/
/*        padding: 1.5em 0 0 0.5em;*/
/*        font-size: 1.6em;*/
/*    }*/

/*    .txt-header-title p {*/
/*        font-size: 1em;*/
/*        font-weight: 200;*/
/*        padding-left: 1em;*/


/*    }*/

/*    .txt-header-title button {*/
/*        margin-top: 0;*/
/*        margin-bottom: 0.5em;*/
/*    }*/




/*}*/

